--- a/Data_Augment.ipynb
+++ b/Data_Augment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,23 +27,22 @@
    "source": [
     "import nlpaug.augmenter.word as naw\n",
     "import pandas as pd\n",
-    "import os\n",
     "from pandas import isnull\n",
     "from collections import defaultdict\n",
-    "import nltk\n",
+    "import nltk, os, re\n",
     "\n",
     "nltk.download('stopwords')\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creating Profanity-spelling-error-dictionary (txt-file)\n",
-    "#2 files : profanity-only, combined\n",
     "data_path = \"datasets/\"\n",
     "spelling_path = \"spelling/\"\n",
     "\n",
@@ -52,7 +51,6 @@
     "labels = ['canonical_form_1', 'canonical_form_2', 'canonical_form_3']\n",
     "spelling_dict = defaultdict(list)\n",
     "fname_profanity = spelling_path + \"spelling_en_profanity.txt\"\n",
-    "#fname_combined = spelling_path + \"spelling_en_combined.txt\"\n",
     "\n",
     "for idx, row in profanity_df.iterrows() :\n",
     "    text = row['text']\n",
@@ -67,27 +65,7 @@
     "    for k, v in spelling_dict.items() :\n",
     "        #print(\" \".join([k] + v))\n",
     "        spelling_dict_file.write(\" \".join([k] + v))\n",
-    "        spelling_dict_file.write(\"\\n\")\n",
-    "\n",
-    "# with open(fname_combined, \"a+\", encoding=\"UTF-8\") as spelling_dict_file :\n",
-    "#     for k, v in spelling_dict.items() :\n",
-    "#         #print(\" \".join([k] + v))\n",
-    "#         spelling_dict_file.write(\" \".join([k] + v))\n",
-    "#         spelling_dict_file.write(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Modifying Original Dataset\n",
-    "profanities = list(spelling_dict.keys())\n",
-    "for idx, row in train_df.iterrows() :\n",
-    "    text = row['text']\n",
-    "    label = row['label']\n",
-    "    "
+    "        spelling_dict_file.write(\"\\n\")"
    ]
   },
   {
@@ -96,10 +74,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def contains_prof(text, profanities) :\n",
+    "    tokenized_text = word_tokenize(text)\n",
+    "    return (not not set(tokenized_text).intersection(set(profanities)))\n",
+    "\n",
+    "#Modifying Original Dataset\n",
+    "profanities = list(spelling_dict.keys())\n",
+    "new_texts = []\n",
+    "new_labels = []\n",
+    "\n",
+    "for idx, row in train_df.iterrows() :\n",
+    "    text = row['text']\n",
+    "    label = row['label']\n",
+    "    if contains_prof(text, profanities) :\n",
+    "        new_texts.append(text)\n",
+    "        new_labels.append(label)\n",
+    "\n",
+    "train_df_prof = pd.DataFrame(list(zip(new_texts, new_labels)), columns=['text', 'label'])\n",
+    "train_df_prof.to_csv(data_path + \"2020-12-31-DynamicallyGeneratedHateDataset-entries-v0.1-ProfanityOnly.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def run_aug(n, N, train_df, aug, output_fname, path='') :\n",
     "    train_df_sample = train_df.sample(n=N, ignore_index=True)\n",
     "    #save sample as file\n",
-    "    train_df_sample.to_csv(path + output_fname[:-4] + \"sample_{N}_.csv\".format(N=N), sep=\",\")\n",
+    "    train_df_sample.to_csv(path + output_fname[:-4] + \"original_{N}_.csv\".format(N=N), sep=\",\")\n",
     "\n",
     "    #aug.augment(data, n)\n",
     "    augmented_data_sentences = []\n",
@@ -123,32 +127,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Augmenting - N : 500\n",
       "Augmenting - N : 1000\n",
       "Augmenting - N : 5000\n",
-      "Augmenting - N : 10000\n"
+      "Augmenting - N : 6758\n"
      ]
     }
    ],
    "source": [
     "#Data augmentation\n",
     "stop_words = list(set(stopwords.words('english')))\n",
-    "aug_spelling_prof = naw.SpellingAug(dict_path=fname_profanity, stopwords=stop_words)\n",
+    "aug_spelling_prof = naw.SpellingAug(dict_path=fname_profanity, aug_max=None, aug_p=0.5, stopwords=stop_words)\n",
     "\n",
-    "fnames = [(\"Dataset_aug_profanity_{i}_.csv\").format(i=i) for i in [1000, 5000, 10000]]\n",
+    "fnames = [(\"Dataset_aug_profanity_{i}_.csv\").format(i=i) for i in [500, 1000, 5000, len(train_df_prof)]]\n",
     "output_path = \"augmented_data/\"\n",
     "\n",
     "for fname in fnames :\n",
     "    tokens = fname.split(\"_\")\n",
     "    N = int(tokens[3])\n",
     "    print(\"Augmenting - N : {N}\".format(N=N))\n",
-    "    run_aug(5, N, train_df, aug_spelling_prof, fname, path=output_path)"
+    "    run_aug(5, N, train_df_prof, aug_spelling_prof, fname, path=output_path)"
    ]
   }
  ],
