Augmentation changes. (single -> multiple augmenters)

--- a/Data_Augment.ipynb
+++ b/Data_Augment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +26,7 @@
    ],
    "source": [
     "import nlpaug.augmenter.word as naw\n",
+    "import nlpaug.augmenter.char as nac\n",
     "import pandas as pd\n",
     "from pandas import isnull\n",
     "from collections import defaultdict\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,19 +92,19 @@
     "        new_labels.append(label)\n",
     "\n",
     "train_df_prof = pd.DataFrame(list(zip(new_texts, new_labels)), columns=['text', 'label'])\n",
-    "train_df_prof.to_csv(data_path + \"2020-12-31-DynamicallyGeneratedHateDataset-entries-v0.1-ProfanityOnly.csv\")"
+    "#train_df_prof.to_csv(data_path + \"2020-12-31-DynamicallyGeneratedHateDataset-entries-v0.1-ProfanityOnly.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_aug(n, N, train_df, aug, output_fname, path='') :\n",
     "    train_df_sample = train_df.sample(n=N, ignore_index=True)\n",
     "    #save sample as file\n",
-    "    train_df_sample.to_csv(path + output_fname[:-4] + \"original_{N}_.csv\".format(N=N), sep=\",\")\n",
+    "    train_df_sample.to_csv(path + output_fname[:-4] + \"original.csv\".format(N=N), sep=\",\")\n",
     "\n",
     "    #aug.augment(data, n)\n",
     "    augmented_data_sentences = []\n",
@@ -119,7 +120,7 @@
     "        augmented_data_labels += [label for i in range(n+1)]\n",
     "    \n",
     "    #save new dataset to csv-file\n",
-    "    output_df = pd.DataFrame(list(zip(augmented_data_sentences, augmented_data_labels)), columns=['sentence', 'label'])\n",
+    "    output_df = pd.DataFrame(list(zip(augmented_data_sentences, augmented_data_labels)), columns=['text', 'label'])\n",
     "    output_df.to_csv(path + output_fname, sep=\",\")\n",
     "\n",
     "    return path + output_fname"
@@ -127,33 +128,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_aug_multiple(n, N, train_df, augs, R, output_fname, path='') :  #Using Multiple Augmenters\n",
+    "    train_df_sample = train_df.sample(n=N, ignore_index=True)\n",
+    "    #save sample as file\n",
+    "    train_df_sample.to_csv(path + output_fname[:-4] + \"original.csv\".format(N=N), sep=\",\")\n",
+    "\n",
+    "    #aug.augment(data, n)\n",
+    "    augmented_data_sentences = []\n",
+    "    augmented_data_labels = []\n",
+    "\n",
+    "    assert(sum(R)==n)\n",
+    "    assert(len(R)==len(augs))\n",
+    "\n",
+    "    for idx, row in train_df_sample.iterrows() :\n",
+    "        sentence = row['text']\n",
+    "        label = row['label']\n",
+    "        augmented = []\n",
+    "\n",
+    "        for r, aug in zip(R, augs) :\n",
+    "            sents = aug.augment(sentence, n=r) #if r > 1 else [aug.augment(sentence, n=r)]\n",
+    "            augmented.append(sents)\n",
+    "\n",
+    "        #label-preserving\n",
+    "        augmented_data_sentences += ([sentence] + augmented)\n",
+    "        augmented_data_labels += [label for i in range(n+1)]\n",
+    "    \n",
+    "    #save new dataset to csv-file\n",
+    "    output_df = pd.DataFrame(list(zip(augmented_data_sentences, augmented_data_labels)), columns=['text', 'label'])\n",
+    "    output_df.to_csv(path + output_fname, sep=\",\")\n",
+    "\n",
+    "    return path + output_fname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data augmentation : Single\n",
+    "# stop_words = list(set(stopwords.words('english')))\n",
+    "# aug_spelling_prof = naw.SpellingAug(dict_path=fname_profanity, aug_max=None, aug_p=0.5, stopwords=stop_words)\n",
+    "\n",
+    "# fnames = [(\"Dataset_aug_profanity_{i}_.csv\").format(i=i) for i in [500, 1000, 5000, len(train_df_prof)]]\n",
+    "# output_path = \"augmented_data/\"\n",
+    "\n",
+    "# for fname in fnames :\n",
+    "#     tokens = fname.split(\"_\")\n",
+    "#     N = int(tokens[3])\n",
+    "#     print(\"Augmenting - N : {N}\".format(N=N))\n",
+    "#     run_aug(5, N, train_df_prof, aug_spelling_prof, fname, path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Augmenting - N : 500\n",
-      "Augmenting - N : 1000\n",
-      "Augmenting - N : 5000\n",
-      "Augmenting - N : 6758\n"
+      "Augmenting (Multiple-Augmenters) - N : 500\n",
+      "Augmenting (Multiple-Augmenters) - N : 1000\n",
+      "Augmenting (Multiple-Augmenters) - N : 5000\n",
+      "Augmenting (Multiple-Augmenters) - N : 6758\n"
      ]
     }
    ],
    "source": [
-    "#Data augmentation\n",
+    "#Data augmentation : Multiple Augmenters\n",
     "stop_words = list(set(stopwords.words('english')))\n",
-    "aug_spelling_prof = naw.SpellingAug(dict_path=fname_profanity, aug_max=None, aug_p=0.5, stopwords=stop_words)\n",
     "\n",
-    "fnames = [(\"Dataset_aug_profanity_{i}_.csv\").format(i=i) for i in [500, 1000, 5000, len(train_df_prof)]]\n",
+    "#5 different augmenters\n",
+    "aug_spelling_prof = naw.SpellingAug(dict_path=fname_profanity, aug_max=None, aug_p=0.5, stopwords=stop_words)\n",
+    "aug_spelling_base = naw.SpellingAug(stopwords=stop_words)\n",
+    "aug_char_keyboard = nac.KeyboardAug(stopwords=stop_words)\n",
+    "aug_char_ocr = nac.OcrAug(stopwords=stop_words)\n",
+    "aug_char_random = nac.RandomCharAug(stopwords=stop_words)\n",
+    "\n",
+    "augs = [aug_spelling_prof, aug_spelling_base, aug_char_keyboard, aug_char_ocr, aug_char_random]\n",
+    "R = [1 for i in augs]\n",
+    "\n",
+    "fnames = [(\"Dataset_aug_complex_{i}_.csv\").format(i=i) for i in [500, 1000, 5000, len(train_df_prof)]]\n",
     "output_path = \"augmented_data/\"\n",
     "\n",
     "for fname in fnames :\n",
     "    tokens = fname.split(\"_\")\n",
     "    N = int(tokens[3])\n",
-    "    print(\"Augmenting - N : {N}\".format(N=N))\n",
-    "    run_aug(5, N, train_df_prof, aug_spelling_prof, fname, path=output_path)"
+    "    print(\"Augmenting (Multiple-Augmenters) - N : {N}\".format(N=N))\n",
+    "    run_aug_multiple(5, N, train_df_prof, augs, R, fname, path=output_path)"
    ]
   }
  ],
