--- a/Data_Augment.ipynb
+++ b/Data_Augment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +87,17 @@
     "for idx, row in train_df.iterrows() :\n",
     "    text = row['text']\n",
     "    label = row['label']\n",
-    "    if contains_prof(text, profanities) :\n",
+    "    if contains_prof(text, profanities) and len(word_tokenize(text)) <= 100 :\n",
     "        new_texts.append(text)\n",
     "        new_labels.append(label)\n",
     "\n",
     "train_df_prof = pd.DataFrame(list(zip(new_texts, new_labels)), columns=['text', 'label'])\n",
-    "#train_df_prof.to_csv(data_path + \"2020-12-31-DynamicallyGeneratedHateDataset-entries-v0.1-ProfanityOnly.csv\")"
+    "train_df_prof.to_csv(data_path + \"2020-12-31-DynamicallyGeneratedHateDataset-entries-v0.1-ProfanityOnly.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
       "Augmenting (Multiple-Augmenters) - N : 500\n",
       "Augmenting (Multiple-Augmenters) - N : 1000\n",
       "Augmenting (Multiple-Augmenters) - N : 5000\n",
-      "Augmenting (Multiple-Augmenters) - N : 6758\n"
+      "Augmenting (Multiple-Augmenters) - N : 6513\n"
      ]
     }
    ],
